Updated licence, removed scripts

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "A simple wrapper for Rollbar events.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neurotech/rollbar-relay.git"
@@ -19,7 +16,7 @@
     "info"
   ],
   "author": "Tim Douglas",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/neurotech/rollbar-relay/issues"
   },
