--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/neurotech/rollbar-relay/issues"
   },
-  "homepage": "https://github.com/neurotech/rollbar-relay#readme"
+  "homepage": "https://github.com/neurotech/rollbar-relay#readme",
+  "dependencies": {
+    "rollbar": "0.6.0"
+  }
 }
